# rdm-datalad

./: .codespellrc  .gitignore  .nojekyll  Dockerfile  Dockerfile.datalad  Makefile  README.md  _quarto-ci.yml  _quarto-ipynb.yml  _quarto.yml  _variables.yml  convert_colab.py  faq.html  generate_install.py  index.html  index.qmd  publication.html  publication.qmd  pyproject.toml  robots.txt  search.json  setup.html  setup.qmd  sitemap.xml  tutorial.html  tutorial.qmd  tutorial_colab.html  tutorial_colab.ipynb
.github/workflows/: docker.yml  publish.yml
site_libs/bootstrap/: bootstrap-5e541dbae3e6ed7453ce4e6ee8581165.min.css  bootstrap-9fa9e98f73ee3efa585e3f50c18792c0.min.css  bootstrap.min.css
