[project]
name = "rdm-datalad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bash-kernel>=0.10.0",
    "datalad>=1.3.1",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
